--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.10.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
@@ -11,8 +12,11 @@
     "web3": "^1.6.1"
   },
   "dependencies": {
+    "@nomiclabs/buidler": "^1.4.8",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@openzeppelin/contracts": "^3.4.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
-    "@openzeppelin/hardhat-upgrades": "^1.12.0"
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "dotenv": "^10.0.0"
   }
 }
